# Schreibdienst

./: .env.example  .env.local.example  .gitignore  ARCHITECTURE.md  ARCHIVE_SYSTEM.md  CORRECTION_LOG.md  Dockerfile  Dockerfile.coolify  ElevenLabs.txt  LICENSE  PROVIDER_CONFIG.md  Procfile  RAILWAY.md  RAILWAY_SIMPLE.md  README.md  SETUP_LOCAL_GPU.md  SETUP_VOXTRAL_LOKAL.md  TEST-MISTRAL-README.md  WHISPERX.md  WHISPERX_TIMESTAMP_INTERFACE.md  Wavefile.txt  create-test-audio.sh  docker-compose.yml  generate-test-audio.js  generate_test_audio.py  instrumentation.ts  next.config.js  nixpacks.toml  package-lock.json  package.json  push-changes.sh  tailwind.config.ts  test-mistral-simple.js  test-mistral-transcribe.js  tsconfig.json  tsconfig.tsbuildinfo
.github/: COPILOT_MEMORY.md  copilot-instructions.md
app/: globals.css  icon.tsx  layout.tsx  page.tsx
artifacts/: medizinische_fachwoerter Chirurgie.txt  medizinische_fachwoerter Radiologie.txt  medtext.txt
cache/: config.json
components/: ArchiveView.tsx  AuthProvider.tsx  AutoGenerateDialog.tsx  BausteinPalette.tsx  BracketHighlight.tsx  BugReportForm.tsx  ChangeIndicator.tsx  ClientLayout.tsx  ComplexTemplateManager.tsx  ConfigPanel.tsx  CorrectionLogViewer.tsx  CustomActionButtons.tsx  CustomActionsManager.tsx  DbTokenManager.tsx  DictationQueue.tsx  DictionaryManager.tsx  DiffHighlight.tsx  EditableTextWithMitlesen.tsx  EditorBlockSidebar.tsx  FolderExplorer.tsx  FolderSelect.tsx  FormattingRulesViewer.tsx  GroupAdminView.tsx  GroupDictionaryManager.tsx  GroupTemplateManager.tsx  HelpPanel.tsx  LoginForm.tsx  (+21 more)
native-host/: CMakeLists.txt
native-host/installer/: CLI_DEPLOY_README.md  install-cli.bat  install-cli.ps1  install-pwa.ps1  schreibdienst-injector-setup.iss  uninstall-cli.bat  uninstall-cli.ps1
native-host/src/: main.cpp
(+302 files in other folders)
